--- a/gb/18/12/29/n10940344.md
+++ b/gb/18/12/29/n10940344.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/umgvlm3440/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/umgvlm3440/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/umgvlm3440/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵歌词感人至深 插画师将“牢记在心”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/12/181229030207100055-600x400.jpg" />
 <h6>插画师Michelle Muzones和先生Rafael Muzones于12月28日晚观看了神韵国际艺术团在芝加哥歌剧院的演出。（新唐人电视台）
 </h6>
 <hr>
-	<p>【大纪元2018年12月29日讯】（大纪元美国芝加哥记者站报导）“演出对布料和色彩的运用令人惊叹。”插画师Michelle Muzones于12月28日晚观看了<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E8%8A%9D%E5%8A%A0%E5%93%A5%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">芝加哥歌剧院</a>的演出后赞美道。</p>
-<p>Muzones表示<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的配色为她的艺术创作带来灵感，“那美丽的风景、云彩、色彩的搭配，真是华丽无比。”“还有<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E8%83%8C%E6%99%AF%E5%A4%A9%E5%B9%95.md#1">背景天幕</a>的运用使得演员可以飞进飞出。”</p>
-<p>当天Muzones和先生一同观看演出，先生Rafael Muzones任职于PNC银行。“演出非常壮观。”“<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E7%BC%96%E8%88%9E.md#1">编舞</a>很漂亮，服饰很优雅。”“音乐、编舞以及舞蹈对故事的呈现都很美。”</p>
-<p>Rafael表示，“那个云彩的节目”给他留下特别印象，“他们如何使用丝绸来做出云彩的造型，那个<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E7%BC%96%E8%88%9E.md#1">编舞</a>很精彩。我女儿跳舞，所以我特别喜欢欣赏舞蹈。”</p>
+	<p>【大纪元2018年12月29日讯】（大纪元美国芝加哥记者站报导）“演出对布料和色彩的运用令人惊叹。”插画师Michelle Muzones于12月28日晚观看了<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%8A%9D%E5%8A%A0%E5%93%A5%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">芝加哥歌剧院</a>的演出后赞美道。</p>
+<p>Muzones表示<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的配色为她的艺术创作带来灵感，“那美丽的风景、云彩、色彩的搭配，真是华丽无比。”“还有<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%83%8C%E6%99%AF%E5%A4%A9%E5%B9%95.md#1">背景天幕</a>的运用使得演员可以飞进飞出。”</p>
+<p>当天Muzones和先生一同观看演出，先生Rafael Muzones任职于PNC银行。“演出非常壮观。”“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BC%96%E8%88%9E.md#1">编舞</a>很漂亮，服饰很优雅。”“音乐、编舞以及舞蹈对故事的呈现都很美。”</p>
+<p>Rafael表示，“那个云彩的节目”给他留下特别印象，“他们如何使用丝绸来做出云彩的造型，那个<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BC%96%E8%88%9E.md#1">编舞</a>很精彩。我女儿跳舞，所以我特别喜欢欣赏舞蹈。”</p>
 <p>Muzones说，男高音演唱的歌词“非常令人感动”，“（歌词）讲述了我们在世上需要牢记的我们的价值观，因为有时我们会在物质财富或现代生活中迷失方向，所以我绝对会把这些话牢记在心。”</p>
 <p>Muzones女士从事插画和油画创造，拥有自己的艺术学校Art Rave Inc，她表示会告诉学生来看演出，“还有我的孩子们，我们今晚是二人约会之夜，但我觉得这也很适合带孩子看，他们一定会很喜欢。”</p>
 <p>最后Rafael说：“如果神韵来到你的城市演出，一定要来看。”</p>
@@ -19,43 +19,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/28/n10937080.md#1">喜见绝美艺术展现神性之美 投资商举家感动</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/28/n10937213.md#1">神韵乐团现场伴奏天赋过人 音乐人激动莫名</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/28/n10937289.md#1">观神韵 跨国知名企业主管喜学舞蹈新知</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/28/n10937298.md#1">信仰故事体现慈悲善良 前媒体人满怀感动</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/28/n10937439.md#1">神韵芝加哥大爆满 投行合伙人看到神的存在</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/28/n10937723.md#1">神韵鲜活重现历史 旅游公司CEO饱览古今</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/28/n10937080.md#1">喜见绝美艺术展现神性之美 投资商举家感动</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/28/n10937213.md#1">神韵乐团现场伴奏天赋过人 音乐人激动莫名</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/28/n10937289.md#1">观神韵 跨国知名企业主管喜学舞蹈新知</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/28/n10937298.md#1">信仰故事体现慈悲善良 前媒体人满怀感动</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/28/n10937439.md#1">神韵芝加哥大爆满 投行合伙人看到神的存在</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/28/n10937723.md#1">神韵鲜活重现历史 旅游公司CEO饱览古今</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10088158.md#1" target="_blank">林辉：民国长春市长厚颜事共 文革差点被打死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/4/n11300386.md#1" target="_blank">林辉：大饥荒 中共却无偿送几内亚万吨大米</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/22/n11402499.md#1" target="_blank">法轮功阿根廷中领馆前反迫害 十年如一日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607632.md#1">【时事军事】特种部队 俄入侵乌克兰的秘密武器</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607630.md#1">【菁英论坛】韩大选撬动东亚格局 专家忧选举舞弊</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604998.md#1">【更新2.25】乌总统：我们不会放下武器</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605502.md#1">北京陷窘境 凌晨发表对乌克兰五点立场声明</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605880.md#1">瑞莎发视频祈求俄乌停战 吴凤发文安慰打气</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13606713.md#1">俄乌战火将如何波及美国房地产？</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/umgvlm3440/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/umgvlm3440/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/12/29/n10940344.htm">神韵歌词感人至深 插画师将“牢记在心”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/12/29/n10940344.htm">神韵歌词感人至深 插画师将“牢记在心”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/umgvlm3440/djy/blob/master/gb/18/12/29/n10940344.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/umgvlm3440/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/umgvlm3440/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/12/29/n10940344.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
